src/objects/ffct__MigrationSet__c.object
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>This object defines the metadata and records that will be processed by a Migration Set Job.</description>
    <fields>
        <fullName>ffct__BundleJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the reference to the Bundle Job created for migration.</description>
        <label>Bundle Job</label>
        <referenceTo>ffct__BundleJob__c</referenceTo>
        <relationshipLabel>Migration Sets</relationshipLabel>
        <relationshipName>MigrationSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__EndDate__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Holds the date till which the migration changes will be captured.</description>
        <inlineHelpText>The date till which the migration changes will be captured.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffct__ExcludeUnmanagedItems__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this migration set will not include changes for unmanaged entities in the org. Records for unmanaged objects or standard objects, and unmanaged metadata, will not be included.</inlineHelpText>
        <label>Exclude Unmanaged and Standard Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__FilterByNamespace__c</fullName>
        <label>Filter By Namespace</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>c2g</fullName>
                </value>
                <value>
                    <fullName>ob1</fullName>
                </value>
                <value>
                    <fullName>ffbf</fullName>
                </value>
                <value>
                    <fullName>SCMC</fullName>
                </value>
                <value>
                    <fullName>ffr</fullName>
                </value>
                <value>
                    <fullName>pse</fullName>
                </value>
                <value>
                    <fullName>ffap</fullName>
                </value>
                <value>
                    <fullName>ffgl</fullName>
                </value>
                <value>
                    <fullName>ffbilling</fullName>
                </value>
                <value>
                    <fullName>ffpsai</fullName>
                </value>
                <value>
                    <fullName>VanaHCM</fullName>
                </value>
                <value>
                    <fullName>ffqs</fullName>
                </value>
                <value>
                    <fullName>ffirule</fullName>
                </value>
                <value>
                    <fullName>appirio_core</fullName>
                </value>
                <value>
                    <fullName>ffct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__FilterOnUsers__c</fullName>
        <description>Holds the list of UserIds whose changes will be captured.</description>
        <label>Filter On Users</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__StartDate__c</fullName>
        <description>Holds the date from which the migration changes will be captured.</description>
        <inlineHelpText>The date from which the migration changes will be captured.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffct__Status__c</fullName>
        <description>Holds the status of operations performed on MigrationSet</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Prepared</fullName>
                </value>
                <value>
                    <fullName>Bundled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__TotalNumberOfMetadataMigrations__c</fullName>
        <description>It will show the total count of Metadata Migrations in Migration Set</description>
        <label>Total number of metadata items</label>
        <summaryForeignKey>ffct__MetadataMigration__c.ffct__MigrationSet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffct__TotalNumberOfRecordMigrations__c</fullName>
        <description>It will show the total count of Record Migrations in Migration Set</description>
        <label>Total number of records</label>
        <summaryForeignKey>ffct__RecordMigration__c.ffct__MigrationSet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Migration Set</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <columns>NAME</columns>
        <columns>ffct__StartDate__c</columns>
        <columns>ffct__EndDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Migration Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ffct__EndDateShouldBeLessThanCurrentTime</fullName>
        <active>true</active>
        <description>The end date should be less than current time</description>
        <errorConditionFormula>ffct__EndDate__c  &gt;  NOW()</errorConditionFormula>
        <errorDisplayField>ffct__EndDate__c</errorDisplayField>
        <errorMessage>The End Date must be earlier than the current time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ffct__StartDateShouldBeLessThanCurrentDate</fullName>
        <active>true</active>
        <description>The start date should be less than current Time</description>
        <errorConditionFormula>ffct__StartDate__c   &gt;    NOW()</errorConditionFormula>
        <errorDisplayField>ffct__StartDate__c</errorDisplayField>
        <errorMessage>The Start Date must be earlier than the current time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ffct__StartDateShouldBeLessThanEndDate</fullName>
        <active>true</active>
        <description>The start date should be less end date.</description>
        <errorConditionFormula>ffct__StartDate__c   &gt;   ffct__EndDate__c</errorConditionFormula>
        <errorDisplayField>ffct__StartDate__c</errorDisplayField>
        <errorMessage>The End Date must be later than the Start Date.</errorMessage>
    </validationRules>
</CustomObject>